--- a/yesod/bench/bench.cabal
+++ b/yesod/bench/bench.cabal
@@ -17,19 +17,16 @@ executable         bench
                 GADTs
                 EmptyDataDecls
 
-    build-depends: base                          >= 4          && < 5
-                 , yesod                         == 1.2.2
-                 , yesod-core                    == 1.2.4
-                 , text                          >= 0.11       && < 0.12
-                 , persistent                    >= 1.2        && < 1.3
-                 , persistent-mysql              >= 1.2        && < 1.3
-                 , persistent-mongoDB            >= 1.2        && < 1.3
-                 , warp                          >= 1.3        && < 1.4
-                 , unix                          >= 2.5
-                 , network-conduit               >= 1.0
+    build-depends: base                          >= 4.7        && < 5
+                 , yesod                         >= 1.2.5.2    && < 1.3
+                 , yesod-core                    == 1.2.14     && < 1.3
+                 , text                          >= 0.11       && < 1.2
+                 , persistent                    >= 1.3        && < 1.4
+                 , persistent-mysql              >= 1.3        && < 1.4
+                 , persistent-mongoDB            >= 1.3        && < 1.4
+                 , warp                          >= 2.1        && < 2.2
                  , primitive                     >= 0.5
                  , mwc-random                    >= 0.12
                  , pool-conduit                  >= 0.1.2
                  , network
                  , mongoDB
-                 , aeson
